# Simple-CNN

./: CMakeLists.txt  README.md  face_binary_cls.cpp  header.h  main  main.cpp  matrices.hpp  mul.cpp  mul.hpp  out.txt  out_conv1.txt  test1  test1.cpp
